2005-03-19  Ulrich Drepper  <drepper@redhat.com>

	* inet/test-ifaddrs.c: Use test-skeleton.
	* inet/test_ifindex.c: Likewise.

	* elf/dl-lookup.c (add_dependency): Always search l_initfini if
	the list exists.

	* elf/Makefile: Add rules to build and run order2.
	* elf/order2.c: New file.
	* elf/order2mod1.c: New file.
	* elf/order2mod2.c: New file.
	* elf/order2mod3.c: New file.
	* elf/order2mod4.c: New file.

2005-03-19  Jakub Jelinek  <jakub@redhat.com>

	* elf/dl-open.c (dl_open_worker): Print exact l_direct_opencount value,
	it has been incremented before.

2005-03-18  Ulrich Drepper  <drepper@redhat.com>

	* elf/dl-fini.c (_dl_fini): Split sorting of the maps in separate
	function _dl_sort_fini.
	(_dl_sort_fini): New function.
	* sysdeps/generic/ldsodefs.h: Declare _dl_sort_fini.
	* elf/dl-close.c (_dl_close): Call _dl_sort_fini before running
	destructors to call them in the right order.

2005-02-07  Steven Munroe  <sjmunroe@us.ibm.com>

	* sysdeps/powerpc/bits/link.h (La_ppc64_regs): Add lr_vrsave.
	(La_ppc64_retval): Correct size of lrc_fp.
	* sysdeps/powerpc/powerpc64/dl-trampoline.S (_dl_profile_resolve):
	Fix up ABI problems and complete function.

2005-03-10  Jakub Jelinek  <jakub@redhat.com>

	* math/test-misc.c (main): Add some more tests.

2005-03-17  Jakub Jelinek  <jakub@redhat.com>

	* posix/regcomp.c (re_compile_fastmap_iter): Fix check for failed
	__wcrtomb.  Check return values of other __wcrtomb calls.
	* posix/regex_internal.c (build_wcs_buffer, re_string_skip_chars):
	Change mbclen type to size_t.
	(build_wcs_upper_buffer): Change mbclen and mbcdlen type to size_t.
	Handle mb chars whose upper case doesn't have multibyte representation
	in locale's charset.

2005-03-15  Jakub Jelinek  <jakub@redhat.com>

	* malloc/malloc.c (_int_icalloc, _int_icomalloc, iALLOc,
	public_iCALLOc, public_iCALLOc, public_iCOMALLOc): Protect with
	#ifndef _LIBC.

	[BZ #779]
	* malloc/malloc.c (public_mTRIm): Initialize malloc if not yet
	initialized.
